--- a/css/style.css
+++ b/css/style.css
@@ -6,13 +6,13 @@ body {
     align-items: center;
     justify-content: center;
     background: linear-gradient(to top, #F09A4D, #C1D9E6, #049bc5);
-    font-family: 'Inter';
+    font-family: 'zabars', Arial, Helvetica, sans-serif;
 }
 
 h1 {
-    font-size: 50px;
-    position: absolute;
-    top: 0;
+    font-size: 70px;
+    letter-spacing: 4px;
+    text-shadow: 4px 4px 4px rgba(0, 0, 0, 0.4);
 }
 
 .position-relative {
