StatusBar Bottle added

--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ h1 {
 
 canvas {
     /* background-color: black; */
-    margin-top: 40px;
+    /* margin-top: 40px; */
     border-radius: 20px;
     border: 1px solid rgba(131, 128, 128, 0.01);
 }
