character and bottle fixed

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background: linear-gradient(to top, #F09A4D, #C1D9E6, #049bc5);
+    background: linear-gradient(to top, #F09A4D, #C1D9E6, #049CC8);
     font-family: 'zabars', Arial, Helvetica, sans-serif;
 }
 
