--- a/css/style.css
+++ b/css/style.css
@@ -7,122 +7,489 @@ body {
     justify-content: center;
     background: linear-gradient(to top, #F09A4D, #C1D9E6, #049CC8);
     font-family: 'zabars', Arial, Helvetica, sans-serif;
+    letter-spacing: 1px;
 }
 
+
 h1 {
+    position: absolute;
+    top: -20px;
     font-size: 70px;
     letter-spacing: 4px;
     text-shadow: 4px 4px 4px rgba(0, 0, 0, 0.4);
+    color: #ff9f00;
 }
 
-.position-relative {
-    position: relative;
-    margin-bottom: 100px;
-}
 
 canvas {
+    display: block;
     border-radius: 20px;
     border: 1px solid rgba(131, 128, 128, 0.01);
 }
+
+
+.enterFullscreenIcon {
+    width: 35px;
+    height: 35px;
+    position: absolute;
+    top: 13px;
+    right: 15px;
+}
+
+
+.enterFullscreenIcon:hover {
+    cursor: pointer;
+    transition: all 225ms ease-in-out;
+    transform: scale(1.2);
+}
+
+
+.exitFullscreenIcon {
+    width: 35px;
+    height: 35px;
+    position: absolute;
+    top: 13px;
+    right: 15px;
+}
+
+
+.exitFullscreenIcon:hover {
+    cursor: pointer;
+    transition: all 225ms ease-in-out;
+    transform: scale(1.2);
+}
+
+
+.positionRelative {
+    position: relative;
+}
+
+
+.startScreenContainer {
+    position: relative;
+    border-radius: 20px;
+    border: 1px solid rgba(131, 128, 128, 0.01);
+}
+
+
+.startScreen {
+    width: 820px;
+    height: 480px;
+    border-radius: 20px;
+    border: 1px solid rgba(131, 128, 128, 0.01);
+}
+
+.spinner {
+    width: 100px;
+    height: 100px;
+    animation: spinner-8k6ao5lg 2.4000000000000004s infinite;
+    border-radius: 50%;
+    background-color: #ff9f00;
+    transform-origin: center;
+}
+
+@keyframes spinner-8k6ao5lg {
+    0% {
+        transform: perspective(288px) rotateY(0deg);
+    }
+
+    10% {
+        transform: perspective(288px) rotateY(-65deg);
+    }
+
+    90%,
+    100% {
+        transform: perspective(288px) rotateY(2880deg);
+    }
+}
+
+
+
+.gameOverScreen {
+    width: 820px;
+    height: 480px;
+    animation: scale-in-center 225ms cubic-bezier(0.250, 0.460, 0.450, 0.940) 100ms both;
+}
+
+
+.btnContainer {
+    margin-top: -55px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+
+.btnRestart {
+    background-color: #FFCC00;
+    box-sizing: border-box;
+    border: 1px solid black;
+    border-radius: 5px;
+    height: 50px;
+    width: 240px;
+    padding-left: 30px;
+    padding-right: 30px;
+    font-weight: bold;
+    font-size: 20px;
+    font-family: 'Aref Ruqaa Ink';
+    animation: scale-in-center 225ms cubic-bezier(0.250, 0.460, 0.450, 0.940) 100ms both;
+}
+
+
+.btnRestart:hover {
+    cursor: pointer;
+    transition: all 225ms ease-in-out;
+    transform: scale(1.2);
+}
+
+
+.btnMainMenu {
+    background-color: #FFCC00;
+    box-sizing: border-box;
+    border: 1px solid black;
+    border-radius: 5px;
+    height: 50px;
+    width: 240px;
+    padding-left: 30px;
+    padding-right: 30px;
+    font-weight: bold;
+    font-size: 20px;
+    font-family: 'Aref Ruqaa Ink';
+    animation: scale-in-center 225ms cubic-bezier(0.250, 0.460, 0.450, 0.940) 100ms both;
+}
+
+
+.btnMainMenu:hover {
+    cursor: pointer;
+    transition: 225ms ease-in-out;
+    transform: scale(1.2);
+}
+
+
+.keyboardButton {
+    width: 40px;
+    height: 40px;
+    padding-left: 15px;
+}
+
+
+.keyboardIcon {
+    font-size: 25px;
+    padding-left: 120px;
+    font-weight: bolder;
+}
+
+
+.audioOnIcon {
+    width: 45px;
+    height: 45px;
+    position: absolute;
+    right: 65px;
+    top: 9px;
+}
+
+
+.audioOnIcon:hover {
+    cursor: pointer;
+    transition: 225ms ease-in-out;
+    transform: scale(1.2);
+}
+
+
+.audioOffIcon {
+    width: 45px;
+    height: 45px;
+    position: absolute;
+    right: 120px;
+    top: 10px;
+}
+
+
+.audioOffIcon:hover {
+    cursor: pointer;
+    transition: 225ms ease-in-out;
+    transform: scale(1.2);
+}
+
+
+.btnPlay {
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    top: 13px;
+    right: 180px;
+    filter: invert(84%) sepia(26%) saturate(5754%) hue-rotate(1deg) brightness(104%) contrast(107%);
+}
+
+
+.btnPlay:hover {
+    cursor: pointer;
+    transition: 225ms ease-in-out;
+    transform: scale(1.2);
+}
+
+
+.positionAbsoluteLeft {
+    position: absolute;
+    left: 10px;
+    bottom: 10px;
+}
+
+
+.positionAbsoluteRight {
+    position: absolute;
+    right: 10px;
+    bottom: 10px;
+}
+
+
+.btnMobile {
+    width: 40px;
+    height: 40px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+
+.containerGameControlls {
+    width: 820px;
+    height: 480px;
+    background-color: black;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+    border-radius: 20px;
+    border: 1px solid rgba(131, 128, 128, 0.01);
+    color: #ff9f00;
+
+}
+
+
+.containerGameControlls h2 {
+    font-size: 35px;
+    margin-top: 15px;
+    margin-bottom: 20px;
+}
+
+
+.containerGameDescription {
+    width: 820px;
+    height: 480px;
+    background-color: black;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+    border-radius: 20px;
+    border: 1px solid rgba(131, 128, 128, 0.01);
+    color: #ff9f00;
+}
+
+
+.containerGameDescription h2 {
+    font-size: 35px;
+    margin-top: 15px;
+    margin-bottom: 60px;
+}
+
+
+.containerGameDescription span {
+    font-size: 28px;
+}
+
+
+.steeringIcon {
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    top: 12px;
+    right: 20px;
+    filter: invert(84%) sepia(26%) saturate(5754%) hue-rotate(1deg) brightness(104%) contrast(107%);
+}
+
+
+.steeringIcon:hover {
+    cursor: pointer;
+    transition: all 225ms ease-in-out;
+    transform: scale(1.2);
+}
+
+.border {
+    height: 55px;
+    width: 55px;
+    background-color: rgba(248, 212, 95, 0.4);
+    border-radius: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.border-absolute {
+    position: absolute;
+    left: 35px;
+    top: 30px;
+    height: 55px;
+    width: 55px;
+    background-color: rgba(248, 212, 95, 0.4);
+    border-radius: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.border-absolute:hover {
+    cursor: pointer;
+    transition: all 225ms ease-in-out;
+    transform: scale(1.2);
+}
+
+
+.arrowBack {
+    position: absolute;
+    left: 15px;
+    width: 40px;
+    height: 40px;
+}
+
+
+
+.infoIcon {
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    top: 12px;
+    right: 97px;
+    filter: invert(84%) sepia(26%) saturate(5754%) hue-rotate(1deg) brightness(104%) contrast(107%);
+}
+
+
+.infoIcon:hover {
+    cursor: pointer;
+    transition: all 225ms ease-in-out;
+    transform: scale(1.2);
+}
+
+
+.loadingScreenContainer {
+    width: 820px;
+    height: 480px;
+    background-color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 0;
+    border-radius: 20px;
+}
+
+
+/*************************** Class only for loading Screen ***************************/
+.hide {
+    display: none;
+}
+
+/*************************** Class only for loading Screen ***************************/
+
+
+.containerWithTextAndIcon {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.winScreenContainer {
+    width: 820px;
+    height: 480px;
+}
+
+
+.winScreenContainer h2 {
+    font-size: 35px;
+    padding-top: 15px;
+    margin-top: 0;
+    text-align: center;
+    animation: scale-in-center 225ms cubic-bezier(0.250, 0.460, 0.450, 0.940) 100ms both;
+}
+
+
+.winScreenContainer .btnContainer {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 90px;
+}
+
+
+.imgTrophyContainer {
+    display: flex;
+    justify-content: center;
+}
+
+
+.imgTrophyContainer img {
+    width: 180px;
+    padding-top: 15px;
+    animation: scale-in-center 225ms cubic-bezier(0.250, 0.460, 0.450, 0.940) 100ms both;
+}
+
 
 .d-none {
     display: none;
 }
 
-.soundOff {
-    position: absolute;
-    right: 9%;
-    top: 2%;
-    width: 40px;
+/*************************** Classe only for Fullscreen ***************************/
+.canvasFullScreen {
+    width: 100%;
+    height: 100%;
 }
 
-.soundOff:hover {
-    cursor: pointer;
-    transition: all 225ms ease-in-out;
-    transform: scale(1.2);
+
+.winScreenContainerFullScreen {
+    width: 100%;
+    height: 100%;
 }
 
-.soundOn {
-    position: absolute;
-    right: 9%;
-    top: 2%;
-    width: 40px;
+
+.winScreenContainerFullScreen h2 {
+    padding-top: 180px;
 }
 
-.soundOn:hover {
-    cursor: pointer;
-    transition: all 225ms ease-in-out;
-    transform: scale(1.2);
+
+.imgTrophyContainerFullScreen img {
+    width: 230px;
+    padding-bottom: 155px;
 }
 
-.fullScreen {
-    position: absolute;
-    right: 2%;
-    top: 2%;
-    width: 40px;
-    cursor: pointer;
+
+.gameOverScreenFullScreen {
+    width: 100%;
+    height: 100%;
 }
 
-.fullScreen:hover {
-    cursor: pointer;
-    transition: all 225ms ease-in-out;
-    transform: scale(1.2);
+
+/*************************** Classe only for Fullscreen ***************************/
+
+
+/*************************** Only Keyframes ***************************/
+@keyframes scale-in-center {
+    0% {
+        transform: scale(0);
+        opacity: 1;
+    }
+
+    100% {
+        transform: scale(1);
+        opacity: 1;
+    }
 }
 
-.closeFullScreen {
-    position: absolute;
-    right: 2%;
-    top: 2%;
-    width: 40px;
-    cursor: pointer;
-}
 
-.closeFullScreen:hover {
-    cursor: pointer;
-    transition: all 225ms ease-in-out;
-    transform: scale(1.2);
-}
+@keyframes rotate-center {
+    0% {
+        transform: rotate(0);
+    }
 
-.positionLeft {
-    position: absolute;
-    display: flex;
-    gap: 12px;
-    left: 9px;
-    bottom: 13px;
-}
-
-.imgBack {
-    padding-left: 18px;
-    width: 40px;
-}
-
-.imgForward {
-    width: 40px;
-}
-
-.positionRight {
-    position: absolute;
-    display: flex;
-    gap: 12px;
-    right: 9px;
-    bottom: 13px;
-
-}
-
-.imgBottle {
-    width: 40px;
-}
-
-.imgJump {
-    width: 48px;
-}
-
-.border {
-    height: 60px;
-    width: 60px;
-    background-color: rgba(0,0,0,0.2);
-    border-radius: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    100% {
+        transform: rotate(360deg);
+    }
 }
