--- a/css/media.css
+++ b/css/media.css
@@ -1,10 +1,24 @@
 @media only screen and (max-width: 820px) {
     canvas {
         width: 100%;
+        border-radius: 0px;
+        border: none;
     }
 
     h1 {
         display: none;
+    }
+
+    .startScreen {
+        border-radius: 0px;
+    }
+
+    .gameOverScreen {
+        border-radius: 0px;
+    }
+
+    .winScreenContainer h2 {
+        font-size: 20px;
     }
 }
 
@@ -38,6 +52,16 @@
 
     .positionAbsoluteRight {
         bottom: 7px;
+    }
+
+    .btnMainMenu {
+        width: 180px;
+        font-size: 20px;
+    }
+
+    .btnRestart {
+        width: 180px;
+        font-size: 20px;
     }
 }
 
@@ -303,14 +327,6 @@
 }
 
 
-@media (max-width: 600px) {
-
-    .btnMainMenu,
-    .btnRestart {
-        width: 200px;
-    }
-}
-
 
 @media (max-width: 470px) {
     .btnContainer {
@@ -356,37 +372,27 @@
 @media (max-width: 820px) {
     .winScreenContainer {
         width: 100vw;
+        height: 100%;
     }
 }
 
 
 @media (max-width: 470px) {
-    .winScreenContainer h2 {
-        font-size: 30px;
-    }
 
     .imgTrophyContainer img {
         width: 160px;
     }
 
-    .winScreenContainer .btnContainer {
-        margin-top: 135px;
-    }
 }
 
 
 @media (max-width: 390px) {
-    .winScreenContainer h2 {
-        font-size: 25px;
-    }
+
 
     .imgTrophyContainer img {
         padding-top: 55px;
     }
 
-    .winScreenContainer .btnContainer {
-        margin-top: 116px;
-    }
 }
 
 
@@ -400,9 +406,6 @@
         padding-top: 80px;
     }
 
-    .winScreenContainer .btnContainer {
-        margin-top: 137px;
-    }
 
     .btnMainMenu,
     .btnRestart {
