--- a/css/style.css
+++ b/css/style.css
@@ -105,7 +105,6 @@ canvas {
 
 .gameOverScreen {
     width: 820px;
-    height: 480px;
     border-radius: 20px;
     animation: scale-in-center 225ms cubic-bezier(0.250, 0.460, 0.450, 0.940) 100ms both;
 }
@@ -174,7 +173,6 @@ canvas {
 
 .keyboardIcon {
     font-size: 25px;
-    padding-left: 120px;
     font-weight: bolder;
 }
 
@@ -251,12 +249,20 @@ canvas {
     background-color: black;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
     position: relative;
     border-radius: 20px;
     border: 1px solid rgba(131, 128, 128, 0.01);
     color: #ff9f00;
 
+}
+
+.controlDiv {
+    display: flex;
+    align-items: center;
+    width: 300px;
+    justify-content: space-between;
 }
 
 
@@ -440,7 +446,6 @@ canvas {
 
 .winScreenContainer {
     width: 820px;
-    height: 480px;
 }
 
 
