--- a/css/media.css
+++ b/css/media.css
@@ -1,6 +1,6 @@
 @media only screen and (max-width: 820px) {
     canvas {
-        width: 100%;
+        width: 100vw;
         border-radius: 0px;
         border: none;
     }
@@ -22,6 +22,58 @@
     }
 }
 
+@media only screen and (max-height: 560px) {
+    canvas {
+        height: 100vh;
+        width: 100vw;
+        border: none;
+        border-radius: 0px;
+    }
+
+    .gameOverScreenContainer {
+        height: 100vh;
+        width: 100vw;
+    }
+
+    .startScreen {
+        height: 100vh;
+        width: 100vw;
+        border-radius: 0px;
+    }
+
+    .containerGameDescription {
+        height: 100vh;
+        width: 100vw;
+        border-radius: 0px;
+    }
+
+    .containerGameControlls {
+        height: 100vh;
+        width: 100vw;
+        border-radius: 0px;
+    }
+
+    .gameOverScreen {
+        height: 100vh;
+        width: 100vw;
+        border-radius: 0px;
+    }
+
+    .winScreenContainer {
+        height: 100vh;
+        width: 100vw;
+        border-radius: 0px;
+    }
+
+    .loadingScreenContainer {
+        width: 100%;
+        height: 100%;
+        border-radius: 0px;
+    }
+
+
+}
+
 
 @media (max-width: 690px) {
     .playBtn {
@@ -39,26 +91,35 @@
         width: 60px;
     }
 
-    .audioOffIcon {
-        width: 40px;
+    .border {
         height: 40px;
-        right: 110px;
+        width: 40px;
     }
 
-    .audioOnIcon {
-        width: 40px;
-        height: 40px;
-        right: 60px;
-    }
 
     .enterFullscreenIcon {
         width: 30px;
         height: 30px;
     }
 
+    .audioOnIcon,
+    .audioOffIcon {
+        width: 30px;
+        height: 30px;
+        right: 55px;
+    }
+
+    .audioOnIcon img {
+        width: 25px !important;
+    }
+
+    .audioOffIcon img {
+        width: 25px !important;
+    }
+
     .btnMobile {
-        width: 35px;
-        height: 35px;
+        width: 30px;
+        height: 30px;
     }
 
     .positionAbsoluteLeft {
@@ -222,6 +283,25 @@
 
 
 /***************************  Only for Start Screen ***************************/
+@media (max-width: 500px) {
+
+    .InfoBtn,
+    .controlBtn,
+    .playBtn {
+        height: 30px;
+        width: 40px;
+    }
+
+    .btnPlay,
+    .infoIcon,
+    .steeringIcon {
+        height: 16px;
+        width: 16px;
+    }
+
+}
+
+
 @media (max-height: 480px) {
     .startScreen {
         height: 100vh !important;
@@ -235,7 +315,7 @@
 
 @media (max-width: 820px) {
     .startScreen {
-        width: 100%;
+        width: 100vw;
         height: 100%;
     }
 
@@ -245,83 +325,6 @@
 }
 
 
-@media (max-width: 500px) {
-    .btnPlay {
-        width: 28px;
-        height: 28px;
-        position: absolute;
-        top: 12px;
-        right: 122px;
-    }
-
-    .steeringIcon {
-        width: 35px;
-        height: 25px;
-        position: absolute;
-        top: 13px;
-        right: 20px;
-    }
-
-    .infoIcon {
-        width: 30px;
-        height: 30px;
-        position: absolute;
-        top: 10px;
-        right: 73px;
-    }
-
-
-}
-
-
-@media (max-width: 390px) {
-    .btnPlay {
-        width: 26px;
-        height: 26px;
-        top: 12px;
-        right: 107px;
-    }
-
-    .steeringIcon {
-        width: 32px;
-        height: 23px;
-        top: 11px;
-        right: 18px;
-    }
-
-    .infoIcon {
-        width: 27px;
-        height: 27px;
-        position: absolute;
-        top: 10px;
-        right: 65px;
-    }
-}
-
-
-@media (max-width: 330px) {
-    .btnPlay {
-        width: 20px;
-        height: 20px;
-        right: 87px;
-        top: 13px;
-    }
-
-    .steeringIcon {
-        width: 25px;
-        height: 20px;
-        right: 15px;
-        top: 12px;
-    }
-
-    .infoIcon {
-        width: 22px;
-        height: 22px;
-        position: absolute;
-        top: 11px;
-        right: 53px;
-    }
-}
 
 /***************************  Only for Start Screen ***************************/
 
@@ -436,35 +439,13 @@
 /****************************  Only for Steering Menu ****************************/
 @media (max-width: 820px) {
     .containerGameControlls {
-        width: 100%;
+        width: 100vw;
+        border: none;
+        border-radius: 0px;
     }
 }
 
 
-@media (max-width: 570px) {
-    .keyboardButton {
-        padding-right: 100px;
-    }
-
-    .keyboardIcon {
-        padding-left: 100px;
-    }
-}
-
-
-@media (max-width: 500px) {
-    .arrowBack {
-        left: 25px;
-    }
-
-    .keyboardButton {
-        padding-right: 80px;
-    }
-
-    .keyboardIcon {
-        padding-left: 80px;
-    }
-}
 
 
 @media (max-width: 470px) {
@@ -477,13 +458,6 @@
         height: 35px;
     }
 
-    .keyboardButton {
-        padding-right: 60px;
-    }
-
-    .keyboardIcon {
-        padding-left: 60px;
-    }
 }
 
 
@@ -492,22 +466,6 @@
         font-size: 25px;
     }
 
-    .arrowBack {
-        top: 25px;
-        width: 30px;
-        height: 30px;
-    }
-
-    .keyboardButton {
-        padding-right: 40px;
-        width: 40px;
-        height: 40px;
-    }
-
-    .keyboardIcon {
-        padding-left: 40px;
-        font-size: 22px;
-    }
 }
 
 
@@ -516,9 +474,6 @@
         margin-bottom: 40px;
     }
 
-    .keyboardButton {
-        padding-right: 30px;
-    }
 
     .keyboardIcon {
         padding-left: 30px;
@@ -533,18 +488,10 @@
     }
 
     .arrowBack {
-        top: 23px;
         width: 25px;
         height: 25px;
     }
 
-    .keyboardButton {
-        padding-right: 25px;
-        margin-bottom: 10px;
-        margin-top: 22px;
-        width: 35px;
-        height: 35px
-    }
 
     .keyboardIcon {
         padding-left: 25px;
@@ -564,11 +511,6 @@
         height: 20px;
     }
 
-    .keyboardButton {
-        width: 30px;
-        height: 30px
-    }
-
     .keyboardIcon {
         font-size: 18px;
     }
@@ -580,7 +522,9 @@
 /****************************  Only for Game Description Menu ****************************/
 @media (max-width: 820px) {
     .containerGameDescription {
-        width: 100% !important;
+        width: 100vw !important;
+        border: none;
+        border-radius: 0px;
     }
 }
 
@@ -590,11 +534,6 @@
         font-size: 30px;
     }
 
-    .arrowBack {
-        left: 65px;
-        width: 35px;
-        height: 35px;
-    }
 
     .containerGameDescription span {
         font-size: 16px;
@@ -607,13 +546,6 @@
         font-size: 25px;
     }
 
-    .arrowBack {
-        top: 25px;
-        left: 75px;
-        width: 30px;
-        height: 30px;
-    }
-
     .containerGameDescription span {
         font-size: 15px;
     }
@@ -621,9 +553,6 @@
 
 
 @media (max-width: 525px) {
-    .arrowBack {
-        left: 45px;
-    }
 
     .containerGameDescription span {
         font-size: 14px;
@@ -632,11 +561,7 @@
 
 
 @media (max-width: 490px) {
-    .arrowBack {
-        top: 25px;
-        width: 25px;
-        height: 25px
-    }
+
 
     .containerGameDescription h2 {
         font-size: 23px;
@@ -650,12 +575,6 @@
 
 
 @media (max-width: 450px) {
-    .arrowBack {
-        top: 22px;
-        left: 45px;
-        width: 23px;
-        height: 23px;
-    }
 
     .containerGameDescription h2 {
         font-size: 20px;
@@ -672,12 +591,6 @@
 
 
 @media (max-width: 370px) {
-    .arrowBack {
-        top: 22px;
-        left: 40px;
-        width: 20px;
-        height: 20px;
-    }
 
     .containerGameDescription h2 {
         font-size: 18px;
@@ -685,19 +598,9 @@
 }
 
 
-@media (max-width: 345px) {
-    .arrowBack {
-        left: 25px;
-    }
-}
 
 
 @media (max-width: 310px) {
-    .arrowBack {
-        top: 22px;
-        width: 18px;
-        height: 18px;
-    }
 
     .containerGameDescription h2 {
         font-size: 17px;
@@ -710,9 +613,6 @@
 
 
 @media (max-width: 280px) {
-    .arrowBack {
-        left: 18px;
-    }
 
     .containerGameDescription h2 {
         font-size: 16px;
@@ -738,6 +638,7 @@
     .loadingScreenContainer {
         width: 100%;
         height: 100%;
+        border-radius: 0px;
     }
 }
 
