--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,4 +1,4 @@
 @font-face {
-     font-family:"zabars";
-     src: url("font/zabars.ttf") format("truetype");
-   }
+  font-family: "zabars";
+  src: url("fonts/zabars.ttf") format("truetype");
+}
