--- a/css/mobile.css
+++ b/css/mobile.css
@@ -11,6 +11,7 @@
         left: 0;
         justify-content: center;
         align-items: center;
+        text-align: center;
         z-index: 100;
         font-size: 30px;
         color: tomato;
